apps/worlddatetime/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worlddatetime
spec:
  selector:
    app: worlddatetime

  ports:
    - name: http
      port: 80
      targetPort: 8080

    - name: metrics
      port: 9090
      targetPort: 8080
