apps/worlddatetime/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: worlddatetime
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system

  hostnames:
    - stage.challan.pro

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: worlddatetime
          port: 80
