apps/worlddatetime/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worlddatetime
spec:
  podSelector:
    matchLabels:
      app: worlddatetime

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector: {}

  egress:
    - {}
